# yinyang

./: .gitignore  .travis.yml  LICENSE.md  MANIFEST.in  README.md  example.py  setup.cfg  yinyang.py
.github/workflows/: main.yml
config/: Config.py  OpfuzzHelptext.py  TypefuzzHelptext.py  YinyangHelptext.py  config.py  fusion_functions.txt  generalization.txt  operator_mutations.txt  option_setting.txt
docs/: Citation.md  Contributors.md  Documentation.md  advanced.rst  basic_usage.rst  building_on.rst  conf.py  customization.rst  documentation.md  fusion.rst  index.rst  installation.rst  optfuzz.md  setup.rst
examples/: c27.txt  c31.txt  c42.txt  phi2.smt2  seed27.smt2  seed31.smt2  seed42.smt2
examples/formulas/: phi3.smt2  phi4.smt2
scripts/: SMT-LIB-clone.sh
src/: args.py  utils.py  yinyang.py
src/base/: ArgumentParser.py  Driver.py  Error.py  Exitcodes.py  Utils.py  Version.py
src/core/: Fuzzer.py  FuzzerUtil.py  Logger.py  Solver.py  Statistic.py
src/generators/: Generator.py  TypeAwareOpMutation.py  TypeMutation.py
src/generators/GenTypeAwareMutation/: GenTypeAwareMutation.py  (+2 more)
src/modules/: Fuzzer.py  OptionGenerator.py  Solver.py  Statistic.py  exitcodes.py
src/mutators/: Mutator.py  TypeAwareOpMutation.py
src/parsing/: Ast.py  AstVisitor.py  Parse.py  SMTLIBv2.g4  SMTLIBv2.interp  SMTLIBv2.tokens  SMTLIBv2Lexer.interp  SMTLIBv2Lexer.py  SMTLIBv2Lexer.tokens  SMTLIBv2Listener.py  SMTLIBv2Parser.py  SMTLIBv2Visitor.py  TimeoutDecorator.py  Typechecker.py  Types.py  __init__.py  ast.py  ast_visitor.py  parse.py  regenerate_grammar.sh  timeout_decorator.py  typechecker.py  typechecker_recur.py  types.py  util.py
tests/: RunUnitTests.py  fcts.txt  formula1.smt2  formula2.smt2  runtests.py
tests/integration/: TestCrashes.py  TestDetection.py
tests/regression/: 53.smt2  55.smt2  issue42.py  scoping_bug.py
tests/res/: formula1.smt2  formula2.smt2  formula_file.smt2  fusion_functions.txt  operators.txt
tests/unit/: TestGenTypeAwareMutation.py  TestLocalVariables.py  TestParsing.py  TestSemanticFusion.py  TestTerm.py  TestTypeAwareOpMutation.py  TestTypechecker.py  test.smt2
tests/unittests/: issue18.smt2  issue7.smt2  test_gen_type_aware_mutation.py  test_local_variables.py  test_parsing.py  test_semantic_fusion.py  test_solver.py  test_term.py  test_type_aware_op_mutation.py  test_type_mutation.py  test_typechecker.py
yinyang/config/: Config.py  OpfuzzHelptext.py  TypefuzzHelptext.py  YinyangHelptext.py  fusion_functions.txt  operator_mutations.txt
(+130 files in other folders)
