[metadata]
name = yinyang
version = 0.0.19
author = Dominik Winterer, Chengyu Zhang, Jiwon Park, Zhendong Su
author_email = dominik.winterer@inf.ethz.ch, dale.chengyu.zhang@gmail.com, jiwon.park@polytechnique.edu, ‎zhendong.su@inf.ethz.ch
description = A fuzzing framework for SMT solvers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/testsmt/yinyang
project_urls =
    Bug Tracker = https://github.com/testsmt/yinyang/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
scripts =
    bin/yinyang
    bin/opfuzz
    bin/typefuzz